--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                     <i class="fa fa-envelope"></i>
                 </a>
             </span>  
-            <span class="codepen">
+            <!-- <span class="codepen">
                 <a href="https://codepen.io/Vignesh-Jothi">
                     <i class="fa fa-codepen"></i>
                 </a>
-            </span>
+            </span> -->
         </div>
       <!-- Footer -->
         <footer>
