--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <link rel="shortcut icon" href="favi.svg" type="image/x-icon">
     <title>LinkTree</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNLK56KGTP"></script>
+    <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+        gtag('config', 'G-PNLK56KGTP');
+    </script>
+
+
 </head>
 <body>
     
@@ -22,27 +33,27 @@
              <!-- Link -->
         <div class="links">
             <span class="github">
-                <a href="https://github.com/vignesh-jothi">
+                <a href="https://github.com/vignesh-jothi" target="_blank">
                     <i class="fa fa-github"></i>
                 </a>
             </span>
             <span class="linked">
-                <a href="https://www.linkedin.com/in/vignesh-j-/">
+                <a href="https://www.linkedin.com/in/vignesh-jothi" target="_blank">
                     <i class="fa fa-linkedin"></i>
                 </a>
             </span>
             <span class="insta">
-                <a href="https://www.instagram.com/vigneshjothishwarn/?hl=en">
+                <a href="https://www.instagram.com/vigneshjothishwarn/?hl=en" target="_blank">
                     <i class="fa fa-instagram"></i>
                 </a>
             </span>
             <span class="twitter">
-                <a href="https://twitter.com/jvignesh609">
+                <a href="https://twitter.com/_vigneshjothi" target="_blank">
                     <i class="fa fa-twitter"></i>
                 </a>
             </span>
             <span class="mail">
-                <a href="mailto:jvignesh609@gmail.com">
+                <a href="mailto:vigneshjothishwaran@gmail.com" target="_blank">
                     <i class="fa fa-envelope"></i>
                 </a>
             </span>  
@@ -51,19 +62,23 @@
                     <i class="fa fa-codepen"></i>
                 </a>
             </span> -->
+            <div class="resume">
+                    <a href="https://flowcv.com/resume/7m6t44q53p" target="_blank" class="resume-link">Resume</a>
+            </div>
         </div>
+        
       <!-- Footer -->
         <footer>
             <div class="bottom-text">
                 <p>2023 © 
-                    <a href="https://www.instagram.com/vigneshjothishwarn/?hl=en">Vignesh-Jothi</a>
+                    <a href="mailto:vigneshjothishwaran@gmail.com">Vignesh-Jothi</a>
                 </p>
             </div>
         </footer>
 </div>
 <script>
     var typed = new Typed(".typing", {
-        strings: ["front- end developer", "Freelancer"],
+        strings: ["Web developer", "Freelancer"],
         typeSpeed: 100,
         backSpeed: 60,
         cursorChar: ' |',
