--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="shortcut icon" href="favi.svg" type="image/x-icon">
@@ -35,22 +36,22 @@
         <div class="links">
             <span class="github">
                 <a href="https://github.com/vignesh-jothi" target="_blank">
-                    <i class="fa fa-github"></i>
+                    <i class="fab fa-github"></i>
                 </a>
             </span>
             <span class="linked">
                 <a href="https://www.linkedin.com/in/vignesh-jothi" target="_blank">
-                    <i class="fa fa-linkedin"></i>
+                    <i class="fab fa-linkedin"></i>
                 </a>
             </span>
             <span class="insta">
                 <a href="https://www.instagram.com/vigneshjothishwarn/?hl=en" target="_blank">
-                    <i class="fa fa-instagram"></i>
+                    <i class="fab fa-instagram"></i>
                 </a>
             </span>
             <span class="twitter">
                 <a href="https://twitter.com/_vigneshjothi" target="_blank">
-                    <i class="fa fa-twitter"></i>
+                    <i class="fab fa-twitter"></i>
                 </a>
             </span>
             <span class="mail">
@@ -58,11 +59,11 @@
                     <i class="fa fa-envelope"></i>
                 </a>
             </span>  
-            <!-- <span class="codepen">
-                <a href="https://codepen.io/Vignesh-Jothi">
-                    <i class="fa fa-codepen"></i>
+            <span class="hackerrank">
+                <a href="https://www.hackerrank.com/profile/vignesh_jothi" target="_blank">
+                    <i class="fab fa-hackerrank"></i>
                 </a>
-            </span> -->
+            </span>
             <div class="resume">
                     <a href="https://flowcv.com/resume/7m6t44q53p" target="_blank" class="resume-link">Resume</a>
             </div>
