refactor : added meta tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Backend Web Developer, PHP Developer, Laravel Developer, CodeIgniter Developer, Freelancer, Web Development, Backend Development, Web Programming, PHP Frameworks, Full Stack Developer, MySQL, SQL, Web Application Developer, Responsive Design, Server Management, Advanced PHP, PHP Scripting, Web Services, RESTful APIs, Software Engineer, IT Specialist">
+    <title>Backend Developer | LinkTree</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="shortcut icon" href="favi.svg" type="image/x-icon">
-    <title>LinkTree</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNLK56KGTP"></script>
@@ -59,11 +59,11 @@
                     <i class="fa fa-envelope"></i>
                 </a>
             </span>  
-            <span class="hackerrank">
+            <!-- <span class="hackerrank">
                 <a href="https://www.hackerrank.com/profile/vignesh_jothi" target="_blank">
                     <i class="fab fa-hackerrank"></i>
                 </a>
-            </span>
+            </span> -->
             <div class="resume">
                     <a href="https://flowcv.com/resume/7m6t44q53p" target="_blank" class="resume-link">Resume</a>
             </div>
@@ -80,7 +80,7 @@
 </div>
 <script>
     var typed = new Typed(".typing", {
-        strings: ["Backend Web developer", "Freelancer"],
+        strings: ["Backend Web developer", "Web Application Developer"],
         typeSpeed: 100,
         backSpeed: 60,
         cursorChar: ' |',
