refact : added portfolio link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 </a>
             </span> -->
             <div class="resume">
-                    <a href="https://flowcv.com/resume/7m6t44q53p" target="_blank" class="resume-link">Resume</a>
+                <a href="https://flowcv.com/resume/7m6t44q53p" target="_blank" class="resume-link">Resume</a>
+                <a href="https://vignesh-jothi.github.io/portfolio/" target="_blank" class="resume-link">Portfolio</a>
             </div>
         </div>
         
